# coxeter

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
include/coxeter/: commands.h  dictionary.hpp  directories.h  set.h  version.h
src/: CMakeLists.txt  affine.cpp  automata.cpp  bits.cpp  cells.cpp  commands.cpp  constants.cpp  coxgroup.cpp  coxtypes.cpp  error.cpp  fcoxgroup.cpp  files.cpp  general.cpp  graph.cpp  help.cpp  interactive.cpp  interface.cpp  invkl.cpp  io.cpp  kl.cpp  klsupport.cpp  memory.cpp  minroots.cpp  posets.cpp  schubert.cpp  special.cpp  transducer.cpp  type.cpp  typeA.cpp  uneqkl.cpp  wgraph.cpp
tests/: CMakeLists.txt  test_coxeter.cpp
